# marsrover-cpp

./: .gitignore  CMakeLists.txt  README.md  cccc.sh  main.cpp  requirement.md
src/: CMakeLists.txt  GildedRose.h  demo.cpp  demo.h
test/: CMakeLists.txt  GildedRoseTest.cpp  Person.h  test.cpp
